--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,11 @@
 {
-  "functions": {
-    "api/extract.py": {
-      "runtime": "python3.10"
-    }
-  },
   "builds": [
     {
       "src": "api/extract.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "runtime": "python3.10"
+      }
     }
   ],
   "routes": [
