--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
       "src": "api/extract.py",
       "use": "@vercel/python",
       "config": {
-        "runtime": "python3.10"
+        "runtime": "python@3.10"
       }
     }
   ],
